--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.7.1",
+    "axios": "^1.4.0",
     "chalk": "4.1.2",
     "discord-api-types": "^0.37.45",
     "discord-rpc": "^4.0.1",
